# StratusGFX

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  build_examples.py  dependency_build.py
Examples/: CMakeLists.txt
Examples/Common/: CameraController.h  FrameRateController.h  LightComponents.h  LightControllers.cpp  LightControllers.h  WorldLightController.h
Examples/ExampleEnv00/: CMakeLists.txt  ExampleApp.cpp
Examples/ExampleEnv01/: CMakeLists.txt  StratusGFX.cpp
Examples/ExampleEnv02/: CMakeLists.txt  Sponza.cpp
Examples/ExampleEnv03/: CMakeLists.txt  Interrogation.cpp
Examples/ExampleEnv04/: CMakeLists.txt  CornellBox.cpp  Forest.cpp  SanMiguel.cpp
Examples/ExampleEnv05/: Bistro.cpp  CMakeLists.txt
Examples/ExampleEnv05/ExampleEnv04/: CMakeLists.txt  SanMiguel.cpp
Examples/ExampleEnv06/: Bathroom.cpp  CMakeLists.txt
Examples/ExampleEnv07/: CMakeLists.txt  Forest.cpp  Warehouse.cpp
Examples/ExampleEnv08/: CMakeLists.txt  CornellBox.cpp  Custom.cpp  Test.cpp  bindless.fs  bindless.vs
Examples/ExampleEnv09/: CMakeLists.txt  JunkShop.cpp
Source/: CMakeLists.txt  StratusApplication.cpp  StratusApplication.h  StratusApplicationThread.cpp  StratusApplicationThread.h  StratusAsync.h  StratusCamera.cpp  StratusCamera.h  StratusCommon.h  StratusConcurrentHashMap.h  StratusCube.cpp  StratusCube.h  StratusEngine.cpp  StratusEngine.h  StratusEntity.cpp  StratusEntity.h  StratusEntity2.cpp  StratusEntity2.h  StratusEntityCommon.h  StratusEntityManager.cpp  StratusEntityManager.h  StratusEntityProcess.h  StratusFilesystem.cpp  StratusFrameBuffer.cpp  StratusFrameBuffer.h  StratusGFX.cpp  StratusGpuBuffer.cpp  StratusGpuBuffer.h  StratusGpuCommon.h  StratusHandle.h  StratusLight.h  StratusLog.cpp  StratusLog.h  StratusMaterial.cpp  StratusMaterial.h  StratusMath.h  StratusModel.cpp  StratusModel.h  StratusPipeline.cpp  StratusPipeline.h  (+36 more)
Source/Engine/: CMakeLists.txt  STBImage.h  StratusApplication.cpp  StratusApplication.h  StratusApplicationThread.cpp  StratusApplicationThread.h  StratusAsync.h  StratusCamera.cpp  StratusCamera.h  StratusCommon.h  StratusConcurrentHashMap.h  StratusEngine.cpp  StratusEngine.h  StratusEntity.cpp  StratusEntity.h  StratusEntityCommon.h  StratusEntityManager.cpp  StratusEntityManager.h  StratusEntityProcess.h  StratusFilesystem.h  StratusFrameBuffer.cpp  StratusFrameBuffer.h  StratusGpuBindings.h  StratusGpuBuffer.cpp  StratusGpuBuffer.h  StratusGpuCommandBuffer.cpp  StratusGpuCommandBuffer.h  StratusGpuCommon.h  StratusGpuMaterialBuffer.cpp  StratusGpuMaterialBuffer.h  StratusGraphicsDriver.cpp  StratusGraphicsDriver.h  StratusHandle.h  StratusLight.h  StratusLog.cpp  StratusLog.h  StratusMaterial.cpp  StratusMaterial.h  StratusMath.cpp  StratusMath.h  (+28 more)
Source/Shaders/: aa_common.glsl  aabb.glsl  aabb_draw.fs  aabb_draw.vs  alpha_test.glsl  atmospheric.fs  atmospheric.vs  atmospheric_postfx.fs  atmospheric_postfx.glsl  atomic.glsl  bindings.glsl  bloom.fs  common.glsl  csm.fs  csm.gs  csm.vs  csm_old.fs  depth.fs  depth.vs  depth_prepass.fs  depth_prepass.vs  flat_forward_pass.fs  flat_forward_pass.vs  fog.glsl  fullscreen.fs  fullscreen.vs  fullscreen_page_groups.fs  fullscreen_pages.fs  fxaa_luminance.fs  fxaa_smoothing.fs  gammaTonemap.fs  hdr.fs  hdr.vs  hzb_construct.cs  hzb_copy_depth.cs  material.glsl  mesh_data.glsl  pbr.fs  pbr.glsl  pbr2.glsl  (+56 more)
Tests/: CMakeLists.txt  HandleTest.cpp  TestUtils.cpp  TestsMain.cpp  ThreadTest.cpp
Tests/ExampleEnv01/: StratusGFX.cpp
Tests/IntegrationTests/: CMakeLists.txt  EntityTest.cpp  GpuMeshAllocatorTest.cpp  IntegrationMain.cpp  IntegrationMain.h  StartupShutdown.cpp  TestSpatialLight.cpp  TransformTest.cpp
Tests/UnitTests/: CMakeLists.txt  HandleTest.cpp  TestConcurrentHashMap.cpp  TestPoolAllocators.cpp  TestSpatialLight.cpp  TestStackAllocators.cpp  TestUnsafePtr.cpp  TestUtils.cpp  TestsMain.cpp  ThreadTest.cpp
UnitTests/: CMakeLists.txt
gl3w/GL/: gl3w.h
glm/: LICENSE.txt
includes/: Camera.h  Common.h  Cube.h  Engine.h  Entity.h  Filesystem.h  FrameBuffer.h  Light.h  Model.h  Pipeline.h  Quad.h  RenderEntity.h  Renderer.h  STBImage.h  Shader.h  ShaderStorage.h  StratusMath.h  Texture.h  Utils.h  Vertex.h
local/: Rock_Terrain_SF.mtl  Sponza.gltf  crytek-sponza-huge-vray.mtl  hallway.FBX  hintze-hall-1m.mtl  model.mtl  old_house_scene.fbx  sponza.mtl
local/InterrogationRoom/: license.txt  scene.gltf
local/forest/: license.txt  scene.gltf
local/forest_loner/: license.txt  scene.gltf
local/southern_railway_stables_weighbridge/: license.txt  scene.gltf
local/sponza_scene/: scene.gltf
local/stylized_hunters_lodge/: license.txt  scene.gltf
local/tree_house/: license.txt  scene.gltf
resources/models/: *0  BurghIslandBuilding05.mtl  LasPedrotas.fbx  Latrine.fbx  boubin_stump.FBX  cottage_fbx.fbx  hromada_hlina_01_30k_f.FBX  texture_house.fbx  workspace.mel
resources/shaders/: atmospheric.fs  atmospheric.vs  atmospheric_postfx.fs  atmospheric_postfx.glsl  atmospheric_postfx.vs  bloom.fs  bloom.vs  bloom_stage1.fs  bloom_stage2.fs  common.glsl  common.h  csm.fs  csm.gs  csm.vs  depth.fs  depth.vs  flat_forward_pass.fs  flat_forward_pass.vs  fxaa_smoothing.fs  hdr.fs  hdr.vs  mesh_data.glsl  no_texture_lighting.fs  no_texture_lighting.vs  no_texture_no_lighting.fs  no_texture_no_lighting.vs  no_texture_pbr.fs  pbr.fs  pbr.glsl  pbr.vs  pbr_geometry_pass.fs  pbr_geometry_pass.vs  pbr_vpl_gi.cs  pbr_vpl_gi.fs  pbr_vpl_gi.vs  shader.fs  shader.vs  shadow.fs  shadow.gs  shadow.vs  (+22 more)
src/: Camera.cpp  Cube.cpp  Filesystem.cpp  FrameBuffer.cpp  Model.cpp  Pipeline.cpp  Quad.cpp  RenderEntity.cpp  Renderer.cpp  Shader.cpp  StratusGFX.cpp  StratusMath.cpp  Texture.cpp  gl3w.c  main.cpp
