find_package(OpenGL REQUIRED)

set(OUTPUT_NAME Ex00_StartupShutdown)

file(GLOB SOURCES ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

add_executable(${OUTPUT_NAME} ${SOURCES})

target_link_libraries(${OUTPUT_NAME}
    ${LIBRARIES})

# set(OUTPUT_DIRECTORY ${ROOT_DIRECTORY}Bin/)
# set_target_properties(${OUTPUT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})

install(TARGETS ${OUTPUT_NAME}
    ARCHIVE DESTINATION Bin
    LIBRARY DESTINATION Bin
    RUNTIME DESTINATION Bin)
