find_package(OpenGL REQUIRED)

set(ROOT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/../../)
set(OUTPUT_NAME Ex02_Sponza)

include_directories(${ROOT_DIRECTORY}/gl3w/include ${ROOT_DIRECTORY} ${ROOT_DIRECTORY}/Source/ ${CMAKE_CURRENT_LIST_DIR} ${OPENGL_INCLUDE_DIRS} ${ROOT_DIRECTORY}/assimp/Deploy/include ${ROOT_DIRECTORY}/SDL2/include)
link_directories(${ROOT_DIRECTORY}/Bin)
file(GLOB SOURCES ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

add_executable(${OUTPUT_NAME} ${SOURCES})
target_link_libraries(${OUTPUT_NAME}
    StratusEngine)

set(OUTPUT_DIRECTORY ${ROOT_DIRECTORY}/Bin/)
set_target_properties(${OUTPUT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})

install(TARGETS ${OUTPUT_NAME}
    ARCHIVE DESTINATION Bin
    LIBRARY DESTINATION Bin
    RUNTIME DESTINATION Bin)